tests/golden/frontend/invalid/top_level_if_forbidden.vit
if true {
  give 1
}
